--- a/taco-cloud/src/main/resources/templates/orderForm.html
+++ b/taco-cloud/src/main/resources/templates/orderForm.html
@@ -16,17 +16,20 @@
 		</div>
 		<h3>Deliver my taco masterpieces to...</h3>
 		<label for="name">Name: </label> <input type="text" th:field="*{name}" />
-		<br /> <label for="street">Street address: </label> <input type="text"
-			th:field="*{street}" /> <br /> <label for="city">City: </label> <input
-			type="text" th:field="*{city}" /> <br /> <label for="state">State:
+		<br /> <label for="street">Street address: </label> <input
+			type="text" th:field="*{street}" /> <br /> <label for="city">City:
+		</label> <input type="text" th:field="*{city}" /> <br /> <label for="state">State:
 		</label> <input type="text" th:field="*{state}" /> <br /> <label for="zip">Zip
 			code: </label> <input type="text" th:field="*{zip}" /> <br />
+
 		<h3>Here's how I'll pay...</h3>
 		<label for="ccNumber">Credit Card #: </label> <input type="text"
-			th:field="*{ccNumber}" /> <br /> <label for="ccExpiration">Expiration:
-		</label> <input type="text" th:field="*{ccExpiration}" /> <br /> <label
-			for="ccCVV">CVV: </label> <input type="text" th:field="*{ccCVV}" /> <br />
-		<input type="submit" value="Submit order" />
+			th:field="*{ccNumber}" /> <span class="validationError"
+			th:if="${#fields.hasErrors('ccNumber')}" th:errors="*{ccNumber}">CC
+			Num Error</span> <br /> <label for="ccExpiration">Expiration: </label> <input
+			type="text" th:field="*{ccExpiration}" /> <br /> <label for="ccCVV">CVV:
+		</label> <input type="text" th:field="*{ccCVV}" /> <br /> <input
+			type="submit" value="Submit order" />
 	</form>
 </body>
 </html>
